--- a/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
@@ -60,7 +60,7 @@
     display: inline-block;
     cursor: pointer;
 }
-.ActiveColorSpan{
+.ColorsForm legend span{
     font-size: 9px;
     text-transform: none;
     font-weight: 400;
