feat: render loading blocks when data is loading in product sizes

--- a/src/pages/Slipper/ProductShowcase/ProductDetails/ProductSizes/ProductSizes.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductDetails/ProductSizes/ProductSizes.module.css
@@ -21,6 +21,7 @@
     box-shadow: 0 0 0 1px #ddd;
     text-align: center;
     transition: all 0.15s ease;
+    margin: 0;
 }
 .GendersField label:hover, .SizesField label:hover {
     background-color: #fefefe;
