feat: hide product images when the window size isis below 800px

--- a/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
@@ -1,7 +1,12 @@
 .ProductDetails{
-    width: 33%;
+    width: 100%;
     color: #333;
     font-weight: 400;
+}
+@media (min-width: 800px) {
+    .ProductDetails {
+        width: 33%;
+    }
 }
 @media (min-width: 1180px) {
     .ProductDetails{
