--- a/src/pages/Slipper/ProductShowcase/ProductShowcase.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductShowcase.module.css
@@ -2,13 +2,17 @@
     max-width: 1180px;
     width: 84%;
     margin: auto;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-wrap: nowrap;
 }
 .ProductShowcase {
     padding: 25px 0;
     margin-bottom: 25px;
     background: #f9f9f8;
+}
+@media(min-width:800px ){
+    .ProductShowcaseWrapper{
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-wrap: nowrap;
+    }
 }
