--- a/src/pages/Auth/Signin/Signin.module.css
+++ b/src/pages/Auth/Signin/Signin.module.css
@@ -2,6 +2,12 @@
 	left: 0;
 	width: 100%;
 }
+p.SubmitErrorMessage {
+	font-size: 13px;
+	color: red;
+	line-height: 1.2;
+	margin: 5px 0;
+}
 
 .RightPanelActive.SigninContainer {
 	transform: translateX(-100%);
