--- a/src/pages/Auth/AuthForms/AuthForms.module.css
+++ b/src/pages/Auth/AuthForms/AuthForms.module.css
@@ -1,7 +1,12 @@
-.SignupContainer {
-	left: 100%;
+.SignupContainer, .SigninContainer {
 	width: 100%;
 	transition:  all 0.3s ease;
+}
+.SignupContainer {
+	left: 100%;
+}
+.SigninContainer {
+	left: 0;
 }
 p.SubmitErrorMessage {
 	font-size: 13px;
@@ -12,6 +17,9 @@ p.SubmitErrorMessage {
 .RightPanelActive.SignupContainer {
 	transform: translateX(-100%);
 }
+.RightPanelActive.SigninContainer {
+	transform: translateX(-100%);
+}
 
 @media(min-width: 500px) {
 	.SignupContainer {
@@ -19,12 +27,19 @@ p.SubmitErrorMessage {
 		z-index: 1;
 		opacity: 0;
 		left: 0;
+    }
+    .SigninContainer {
+		width: 50%;
+		z-index: 2;
 	}
 	.RightPanelActive.SignupContainer {
 		transform: translateX(100%);
 		opacity: 1;
 		z-index: 5;
 		animation: show 0.6s;
+    }
+    .RightPanelActive.SigninContainer {
+		transform: translateX(100%);
 	}
 }
 
