--- a/src/layouts/BasicLayout/Header/UserPanel/UserPanel.module.css
+++ b/src/layouts/BasicLayout/Header/UserPanel/UserPanel.module.css
@@ -5,22 +5,26 @@
     position: absolute;
     right: 0;
     top: 50%;
-    transform: translate(0, -50%);
+    height: 100%;
+    transform: translateY(-50%);
     transition: all 0.3s linear;
 }
-.UserPanelContainer.Hide {
-    transform: translate(100%, -50%);
-    transition: all 0.3s linear;
-}
-.UserIcon {
+.Icon {
     display: block;
     width: 19px;
     height: 19px;    
 }
-.UserIconContainer {
+.IconContainer {
     cursor: pointer;
-    padding: 50% 15px;
+    max-width: 100px;
+    padding: 25% 15px;
+    transition: all 0.3s ease;
 }
-.UserIconContainer:hover {
+.IconContainer.Hide {
+    max-width: 0;
+    padding: 0;
+    overflow: hidden;
+}
+.IconContainer:hover {
     opacity: 0.7;
 }
