--- a/src/layouts/BasicLayout/Newsletter/Newsletter.module.css
+++ b/src/layouts/BasicLayout/Newsletter/Newsletter.module.css
@@ -4,6 +4,10 @@
     padding: 65px 0;
     background: #f5f5f5;
 }
+.NewsletterForm {
+    position: relative;
+    margin-bottom: 15px;
+}
 .NewsletterHeading {
     margin: 0;
     font-size: 20px;
@@ -19,6 +23,10 @@
     margin: 15px auto;
     font-size: 13px;
     line-height: 20px;
+}
+.SubscribeText span {
+    text-decoration: underline;
+    cursor: pointer;
 }
 .Disclaimer {
     margin: 10px 0;
@@ -51,7 +59,6 @@
 .InputContainer {
     position: relative;
     display: inline-block;
-    padding-bottom: 15px;
 }
 .ErrorMessage {
     margin: 0;
@@ -64,4 +71,11 @@
 }
 .IsError {
     border: 1px solid red;
+}
+.LoadingSinnerContainer {
+    display: inline-block;
+    position: absolute;
+    min-width: 35px;
+    min-height: 100%;
+    pointer-events: none;
 }
