--- a/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
@@ -70,14 +70,7 @@ legend.PerserveWidthWhenLoading {
 }
 .addToCartBtn {
     background: #F34C3F;
-    color: #fafafa;
-    font-size: 13px;
     width: 100%;
-    padding: 15px 0;
-    margin: 30px 0 0;
-    text-transform: uppercase;
-    border: none;
-    cursor: pointer;
     transition: all .2s ease-in-out;
 }
 .addToCartBtn:hover {
@@ -85,6 +78,12 @@ legend.PerserveWidthWhenLoading {
 }
 .addToCartBtn:disabled {
     background: #F34C3F;
+}
+.ButtonContainer {
+    width: 100%;
+    height: 42px;
+    position: relative;
+    margin: 30px 0 0;
 }
 .addToCartBtn + p {
     font-size: 10px;
