fix: add padding bottom to each CartItem

--- a/src/pages/Cart/CartItems/CartItem/CartItem.module.css
+++ b/src/pages/Cart/CartItems/CartItem/CartItem.module.css
@@ -14,7 +14,7 @@
 .InfoContainer {
     display: flex;
     flex-direction: column;
-    padding: 20px 0 0 40px;
+    padding: 20px 0 20px 40px;
     width: 100%;
 }
 .InfoContainer a:link,
