--- a/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductDetails/ProductDetails.module.css
@@ -68,24 +68,16 @@ data.PerserveWidthWhenLoading{
 legend.PerserveWidthWhenLoading {
     width: 50%;
 }
-.addToCartBtn {
-    background: #F34C3F;
-    width: 100%;
-    transition: all .2s ease-in-out;
-}
-.addToCartBtn:hover {
-    background-color:#dd3a2d;
-}
-.addToCartBtn:disabled {
-    background: #F34C3F;
-}
 .ButtonContainer {
     width: 100%;
     height: 42px;
     position: relative;
     margin: 30px 0 0;
 }
-.addToCartBtn + p {
+.ButtonContainer button {
+    width: 100%;
+}
+.ButtonContainer + p {
     font-size: 10px;
     color: #8a8a8a;
     font-weight: 300;
