feat: add spacing in product details when screen is bigger than 810px

--- a/src/pages/Cart/CartItems/CartItems.module.css
+++ b/src/pages/Cart/CartItems/CartItems.module.css
@@ -3,3 +3,8 @@
     padding: 0;
     list-style-type: none;
 }
+@media (min-width: 810px) {
+    .CartItemsContainer {
+        padding: 0 9% 0 0;
+    }
+}
