--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -9,6 +9,11 @@
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
 }
+.CartContainer data{
+    color: #111;
+    font-weight: 600;
+    font-size: 12px;
+}
 @media (min-width: 810px) {
     .CartContainer {
         width: 70%;
