fix: change links location and widths in cart item

--- a/src/pages/Cart/CartItems/CartItem/CartItem.module.css
+++ b/src/pages/Cart/CartItems/CartItem/CartItem.module.css
@@ -24,6 +24,8 @@
     font-size: 13px;
     text-transform: lowercase;
     font-weight: 600;
+    display: block;
+    width: max-content;
 }
 .InfoContainer p{
     margin: 0;
