refactor: make change dropdownTransition to accept type of transition
Changed the name of the component to Transitions and made it accept the
transition type whether it's slide down or up transition and made it
listen to the transition end instead of the fixed timeout so that it's
dynamic with the ref transition speed

--- a/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuContainer/SideNavMenuContainer.module.css
+++ b/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuContainer/SideNavMenuContainer.module.css
@@ -12,6 +12,7 @@
     padding: 0;
     list-style-type: none;
     overflow: auto;
+    transition: all 300ms ease;
 }
 /*media query to hide it in big screens*/
 @media (min-width: 1025px) {
