--- a/src/layouts/BasicLayout/Header/NavDropdownMenu/NavDropdownMenu.module.css
+++ b/src/layouts/BasicLayout/Header/NavDropdownMenu/NavDropdownMenu.module.css
@@ -6,7 +6,7 @@
     background-color: #f5f5f5;
     box-shadow: 0 2px 2px rgba(0,0,0,.05);
     z-index: -1;
-
+    transition: all 300ms ease;
 }
 
 .Container {
