fix: the button background was wrong in auth form overlay

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -13,7 +13,7 @@ body button.Button {
 }
 body button.ButtonOutlined {
     color: black;
-    background-color: white;
+    background-color: transparent;
     border: 1px solid black;
 }
 body button.ButtonTomato {
