--- a/src/pages/Auth/MobileSwitchPanelButton/MobileSwitchPanelButton.module.css
+++ b/src/pages/Auth/MobileSwitchPanelButton/MobileSwitchPanelButton.module.css
@@ -1,17 +1,9 @@
-.Switch {
+button.Switch {
     position: absolute;
     bottom: 20px;
     left: 0;
     right: 0;
     margin: 0 auto;
     display: inline-block;
-    font: inherit;
-    font-size: 12px;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
-.Switch:hover {
-    text-decoration: underline;
+    font-size: 10px;
 }
