fix: change location of div nested inside of ul in Instagramphotos

--- a/src/layouts/BasicLayout/InstagramPhotos/InstagramPhotos.module.css
+++ b/src/layouts/BasicLayout/InstagramPhotos/InstagramPhotos.module.css
@@ -1,5 +1,7 @@
-.InstaContainer {
+.InstaWrapper {
     position: relative;
+}
+.InstaContainer {
     margin: 50px 0 30px 0;
     padding: 0;
     list-style-type: none;
