fix: increase pagination selector specifity to overload swiper styling

--- a/src/pages/Slipper/ProductShowcase/ProductImagesSwiper/ProductImagesSwiper.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductImagesSwiper/ProductImagesSwiper.module.css
@@ -15,7 +15,7 @@
 .sliderNextElBtn, .sliderPrevElBtn {
     color: black;
 }
-.ActiveBullet{
+span.ActiveBullet{
     background-color: #F34C3F;
     opacity: 1;
     transform: scale(1.2);
